--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,3 +54,10 @@ main section h2 {
   line-height: 2.5rem;
   letter-spacing: 0.11px;
 }
+
+main section a {
+  color: var(--action);
+  line-height: 1.8rem;
+  font-size: 1.2rem;
+  text-decoration: none;
+}
