--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,3 +61,18 @@ main section a {
   font-size: 1.2rem;
   text-decoration: none;
 }
+
+main section .text-wrapper {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 51px;
+}
+
+main section img {
+  width: 100%;
+  height: auto;
+}
